--- a/docs/note/daily/2.md
+++ b/docs/note/daily/2.md
@@ -1,4 +1,7 @@
-### Day2:写出执行结果
+### [Day2: 写出执行结果](/note/daily/2)
+
+<details>
+<summary>分类：JavaScript
 
 ```js
 function side(arr) {
@@ -12,6 +15,17 @@ function a(a, b, c = 3) {
 a(1, 1, 1);
 ```
 
-分类：JavaScript
+</summary>
 
-[答案&解析](https://github.com/lgwebdream/FE-Interview/issues/38)
+> 答案
+
+```
+12
+```
+
+> 解析
+
+arguments 中 c 的值还是 1 不会变成 10，
+因为 a 函数加了默认值，就按 ES 的方式解析，ES6 是有块级作用域的，所以 c 的值是不会改变的
+
+</details>
