--- a/docs/note/daily/3.md
+++ b/docs/note/daily/3.md
@@ -1,5 +1,8 @@
 
-### Day3:写出执行结果
+### [Day3: 写出执行结果](/note/daily/3)
+
+<details>
+<summary>分类：JavaScript
 
 ```js
 var min = Math.min();
@@ -7,6 +10,19 @@ max = Math.max();
 console.log(min < max);
 ```
 
-分类：JavaScript
+</summary>
 
-[答案&解析](https://github.com/lgwebdream/FE-Interview/issues/39)
+> 答案
+
+```
+false
+```
+
+> 解析
+
+按常规的思路，这段代码应该输出 true，毕竟最小值小于最大值。但是却输出 false
+MDN 相关文档是这样解释的
+Math.min 的参数是 0 个或者多个，如果多个参数很容易理解，返回参数中最小的。如果没有参数，则返回 Infinity，无穷大。
+而 Math.max 没有传递参数时返回的是-Infinity.所以输出 false
+
+</details>
