--- a/docs/note/daily/4.md
+++ b/docs/note/daily/4.md
@@ -1,4 +1,7 @@
-### Day4:写出执行结果,并解释原因
+### [Day4: 写出执行结果](/note/daily/4)
+
+<details>
+<summary>分类：JavaScript
 
 ```js
 var a = 1;
@@ -8,6 +11,19 @@ var a = 1;
 })();
 ```
 
-分类：JavaScript
+</summary>
 
-[答案&解析](https://github.com/lgwebdream/FE-Interview/issues/40)
+> 答案
+
+```
+false
+```
+
+> 解析
+
+按常规的思路，这段代码应该输出 true，毕竟最小值小于最大值。但是却输出 false
+MDN 相关文档是这样解释的
+Math.min 的参数是 0 个或者多个，如果多个参数很容易理解，返回参数中最小的。如果没有参数，则返回 Infinity，无穷大。
+而 Math.max 没有传递参数时返回的是-Infinity.所以输出 false
+
+</details>
